email form update

--- a/navigation/index.html
+++ b/navigation/index.html
@@ -40,7 +40,7 @@
 		<div class="info__subscription subscription">Подписка
 			<div class="subscription__description">Получайте специальные предложения и новости сервиса</div>
 			<form action="#" class="subscription__form">
-				<input class="subscription__form_text" type="text" name="email">
+				<input class="subscription__form_text" type="text" name="email" placeholder="Email">
 				<input class="subscription__form_arrow" type="image" name="image" src="img/arrow_forward.svg">
 			</form>
 		</div>
