--- a/body/index.html
+++ b/body/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="rus">
 <head>
 	<meta charset="UTF-8">
 	<title>body</title>
@@ -7,7 +7,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="body">
 	<div class="content">
 		
 		<div class="container">
