Landing page update

--- a/Landing/index.html
+++ b/Landing/index.html
@@ -10,7 +10,7 @@
 
 <header class="header">
 	<div class="header-content">
-		<img src="img/Logo.svg" alt="логотип">
+		<img src="img/logo.svg" alt="логотип">
 		<nav class="main-menu">
 			<ul class="main-menu__list">
 				<li class="main-menu__link">
